<resources>
    <string name="app_name">BioDroid</string>
    <string name="tab_phy">Physical</string>
    <string-array name="desc_phy">
        <item>  Your energy, vitality, and strength are at full tide. Your physical system is able to withstand shock, injury, or
  stress at this time. Sexual drives are above normal. At the same time, physical forces may be overly strong with a
  danger of overexertion or susceptibility to reckless, aggressive activities.</item>
        <item>  In general, you can tire more easily, quickly. There may be some impairment of your physical control or strength with
  a potential for accidents or mishaps in the home, office, or car. A lessening of the body\'s protective senses
  increases the dangers of exertion, exhaustion, and possible injury. Relax, get added rest. Give extra attention to
  physical comforts and aids, such as proper lighting, frequent relaxation periods, that will make your day easier.
  Avoid activities where large amounts of energy are required-for most people, not a good day to start spring cleaning,
  mowing the lawn, or playing a strenuous game of tennis. During health crises, a physical critical can signal a
  recurrence of problems-a possible heart attack, stroke, etc. If you have a particular health problem, it is a good
  time to curtail physical activities that require a large expenditure of energy. In extreme cases, sensory deprivation
  may occur, with a consequent neglect for personal safety as exhibited in acts of either extreme bravery or fool
  hardiness. For those who participate in sports frequently or for the professional\' athlete, performance hangs in the
  balance-it can be your best or worst day. Try to be extremely aware of your physical potential during this unstable
  time; intensify mental concentration to control and extend your physical capabilities for maximum performance and
  possible outstanding achievement.</item>
        <item>  Your physical forces are at low tide with vitality and energy resources possibly drained. Fatigue is common. Rest,
  recuperation are important at this time. Your interest in or inclinations to physical, sexual activities are on the
  wane. In athletic activities, endurance is usually lessened. There is a lack of zest or spirit and a feeling of near
  exhaustion may follow performance. You may have "worn out" feelings in general during this time. Depressive tendencies
  may be present and must be resisted. There is a danger of overexertion if highs in the other cycles tend to override
  your feelings of physical low energy. Watch eating, drinking, as any overindulgence at this time is potentially
  dangerous.</item>
    </string-array>
    <string-array name="desc_emo">
        <item>  Your emotions are keyed to their highest levels. This is the time when you will feel most outwardly directed to
  others, able to enjoy their company, as well as to give them support, encouragement, and understanding if needed. It
  is the optimum time for strengthening your relationships with your lover or friends. Your high emotions can also push
  you to great performances, especially in creative endeavors. On the other hand, depending upon circumstances and your
  personality, be aware of possible runaways, emotional outbursts or over-doing. Your high emotions could also lead you
  to impulsive, rash behavior.</item>
        <item>  Either emotional exhaustion or euphoria is possible-from "the skids" (depression) to great heights (elation,
  outbursts). You may have a "let-down" or tired feeling, since exhaustion is often based on an imbalanced emotional
  state. You may also experience emotional "flair-ups" or extreme Agitation, anxiety, or frustration. In extreme cases,
  suicides or attempted suicides have occurred on or very close to emotional critical days. Overexertion and exhaustion
  due to emotional stress are also potential dangers to health and can trigger a physical crisis such as a heart attack
  or a stroke. Be particularly alert to health side effects in the day\'s activities. Give extra care and attention to
  situations where emotions play a key role: driving your automobile in heavy traffic; stress situations at work;
  dealing with family problems; disciplining and working with young children. In general, forced calmness and mental
  concentration on control of emotions is advised. Keep in mind the unique opportunity of an emotional critical day-by
  harnessing your emotional energies at this time you could develop and strengthen a model of emotional self-control and
  expression which is so important to overall happiness and well-being. This day could give you the opportunity to reach
  important breakthroughs in your emotional life, as well as present possible new avenues of creativity.</item>
        <item>  Your emotional state is relaxed or below normal. In situations where extreme calm or lack of emotions is required,
  this may be helpful. In other circumstances, your feelings, sensitivities, and awareness of your environment may be
  low. lt is a time when you may feel more inwardly directed, less able to extend yourself to others. You may even
  experience feelings of Depression or loneliness. In general, it is a time of passivity rather than engagement.</item>
    </string-array>
    <string-array name="desc_int">
        <item>  Analytical, logistical, and concentrative abilities are at upper levels. This is a prime time for creative thinking,
  composing, writing, decision-making. This is a good time for abstract reasoning, verbal fluency, understanding new
  concepts, number ability, memory manipulation, and for facing new challenges, taking on new work assignments. This is
  also a time of possible frustrations if opportunities for intellectual expansion are limited or missing.</item>
        <item>  On the critical day in the intellectual cycle, there is a tendency to avoid making necessary decisions and to hastily
  improvise acceptable answers to situations. Mental carelessness can often cause a disregard for personal safety and
  survival. Mental Depression and a lower threshold to health hazards are also potential dangers. Verbal fluency-an
  Attribute of intelligence-may be decreased or restricted. The faculties of abstract reasoning, number ability, and
  memory appear to be lessened. Misplacement of valuables and forgetfulness are common. Often, there is a disregard for
  consequences: thus, the man who can\'t swim goes boating; the homemaker with a sore back decides to move the piano to
  another location. lf it is possible to "think before leaping," this is the time to do it. Despite these more frequent
  negative factors, either success or failure in academic or intellectual pursuits is possible on this day, since one\'s
  intellectual acuity is alterable in either direction by the imbalanced state. Mental control through awareness and
  alertness is important at these times. The opportunity to reach new heights, to have a day of intellectual, creative
  brilliance-to have that one stroke of genius that could change your life, are all entirely possible.</item>
        <item>  Your ability to move into new intellectual fields is lessened at this time. Decision-making, judgments, and
  concentration on tasks may all be frustrating or difficult during this period. Impulsive, spur-of-the-moment actions
  with regrettable consequences are possible. Loss or relinquishment of cautions or protective inclinations may occur.
  Depressed or exhausted mental states are also possible.</item>
    </string-array>
    <string name="tab_emo">Emotional</string>
    <string name="tab_int">Intellectual</string>
    <string name="button_ok">OK</string>
    <string name="button_new">New</string>
    <string name="label_btn_birthday">Birthday</string>
    <string name="label_btn_today">For date</string>
    <string name="label_btn_history">Last used birthdays</string>
    <string name="label_btn_theory">Theory</string>
    <string name="label_btn_about">Introduction</string>
    <string name="title_dialog_birthday">Set birthday</string>
    <string name="title_dialog_date">Set date</string>
    <string name="format_date">MMM d, \'\'yy</string>
    <string name="format_date_short">MMM d</string>
    <string name="btnBirthdayDesc">Set birthday with date picker</string>
    <string name="btnResetDateDesc">Reset current date do today</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6913805149169253/3247631688</string>
    <string name="label_btn_version">Version</string>
</resources>