<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <android.support.v4.view.ViewPager
        android:id="@+id/descPager"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="2dp" />

    <de.taytec.biodroid.BioView
        android:id="@+id/surface"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:onClick="showBirthdayPickerDialog"
            android:contentDescription="@string/btnBirthdayDesc"
            android:src="@drawable/ic_action_add_person" />

        <Button
            android:id="@+id/editBirthday"
            style="@android:style/TextAppearance.Holo.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showHistoryDialog"
            android:text="@string/label_btn_birthday" />

        <ImageButton
            android:id="@+id/dateReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:clickable="true"
            android:onClick="resetDateToToday"
            android:contentDescription="@string/btnResetDateDesc"
            android:src="@drawable/ic_action_go_to_today" />

        <Button
            android:id="@+id/editToday"
            style="@android:style/TextAppearance.Holo.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/label_btn_today" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_gravity="center_horizontal">
    </com.google.android.gms.ads.AdView>

</LinearLayout>

